# BridgeEngine

./: .clangd  .gitignore  2  BridgeEngine.sln  Build.lua  CMakeLists.txt  RD_BridgeEngine.cap  README.md  cmake_install.cmake  main.cpp
App/: Build-App.lua  CMakeLists.txt
App/Source/: App.cpp
BridgeEngine/: BridgeEngine.filters  BridgeEngine.vcxproj  main.cpp
BridgeEngine/Modules/Renderer/: DataStructures.h  Renderer.cpp  Renderer.h  VulkanBridge.h  VulkanInstance.h
BridgeEngine/Modules/Renderer/API/Vulkan/: VulkanBridge.cpp  VulkanBridge.h  VulkanContext.cpp  VulkanContext.h  VulkanDataStructures.h
BridgeEngine/Modules/Renderer/API/Vulkan/Components/: ComponentDeclarations.h  DebugMessenger.cpp  DebugMessenger.h  ImageView.cpp  ImageView.h  Initializer.cpp  Initializer.h  SwapChain.cpp  SwapChain.h  SwapChainBuilder.cpp  SwapChainBuilder.h  Window.cpp  Window.h
BridgeEngine/Modules/Renderer/API/Vulkan/Components/Buffers/: BufferHandler.cpp  BufferHandler.h
BridgeEngine/Modules/Renderer/API/Vulkan/Components/Camera/: CameraHandler.cpp  CameraHandler.h
BridgeEngine/Modules/Renderer/API/Vulkan/Components/Devices/: DeviceHandler.cpp  DeviceHandler.h
BridgeEngine/Modules/Renderer/API/Vulkan/Components/Images/: ImageHandler.cpp  ImageHandler.h
BridgeEngine/Modules/Renderer/API/Vulkan/Components/Instance/: Instance.cpp  Instance.h
BridgeEngine/Modules/Renderer/API/Vulkan/Components/RenderPass/: RenderPassHandler.cpp  RenderPassHandler.h
BridgeEngine/Modules/Renderer/API/Vulkan/Components/SwapChain/: SwapChainHandler.cpp  SwapChainHandler.h
BridgeEngine/Modules/Renderer/API/Vulkan/Components/VulkanInstanceManager/: VulkanInstanceManager.cpp  VulkanInstanceManager.h
BridgeEngine/Modules/Renderer/API/Vulkan/Components/Window/: WindowHandler.cpp  WindowHandler.h
BridgeEngine/Modules/Renderer/API/Vulkan/Resources/Buffers/: BufferBuilder.cpp  BufferBuilder.h
BridgeEngine/Modules/Renderer/API/Vulkan/Resources/ImageViews/: ImageViewBuilder.cpp  ImageViewBuilder.h
BridgeEngine/Modules/Renderer/Camera/: Camera.h
BridgeEngine/Modules/Renderer/Includes/: ImageView.h  Initializer.cpp  Initializer.h  SwapChain.cpp  SwapChain.h  Window.cpp  Window.h
Core/: Build-Core.lua  CMakeLists.txt  config.h.in
Core/Shaders/: compile.bat  frag.spv  fragTextured.spv  pbr.frag  pbr.spv  scene.spv  scene.vert  shader.frag  shader.vert  shadow.spv  shadow.vert  shadowFrag.frag  shadowFrag.spv  textured.frag  textured.spv  vert.spv  vertTextured.vert
Core/Source/Renderer/: DataStructures.h  FileLoader.cpp  FileLoader.h  FileLoaderData.h  FrontEndTypes.h  ObjectData.h  Renderer.cpp  Renderer.h  RendererTypes.h  VulkanAbstractions.h
Core/Source/Renderer/API/Vulkan/: VkTypes.h  VulkanAbstractions.h  VulkanContext.cpp  VulkanContext.cpp~  VulkanContext.h  VulkanDataStructures.h  err.txt
Core/Source/Renderer/API/Vulkan/Components/: ComponentDeclarations.h
Core/Source/Renderer/API/Vulkan/Components/Buffers/: BufferHandler.cpp  BufferHandler.h
Core/Source/Renderer/API/Vulkan/Components/Camera/: CameraController.cpp  CameraController.h  CameraHandler.cpp  CameraHandler.h  OrbitCamera.cpp  OrbitCamera.h
Core/Source/Renderer/API/Vulkan/Components/DescriptorSets/: DescriptorSetHandler.cpp  DescriptorSetHandler.h
Core/Source/Renderer/API/Vulkan/Components/Devices/: DeviceHandler.cpp  DeviceHandler.h
Core/Source/Renderer/API/Vulkan/Components/Images/: ImageHandler.cpp  ImageHandler.h
Core/Source/Renderer/API/Vulkan/Components/Mesh/: Mesh3D.h
Core/Source/Renderer/API/Vulkan/Components/ModelLoader/: ModelLoader.h
Core/Source/Renderer/API/Vulkan/Components/RenderPass/: RenderPassHandler.cpp  RenderPassHandler.h
Core/Source/Renderer/API/Vulkan/Components/SwapChain/: SwapChainHandler.cpp  SwapChainHandler.h
Core/Source/Renderer/API/Vulkan/Components/VulkanGlobalState/: VulkanGlobalState.cpp  VulkanGlobalState.h
Core/Source/Renderer/API/Vulkan/Components/VulkanInstanceManager/: VulkanInstanceManager.cpp  VulkanInstanceManager.h
Core/Source/Renderer/API/Vulkan/Components/Window/: WindowHandler.cpp  WindowHandler.h
Core/Source/Renderer/Camera/: CameraController.cpp  CameraController.h  OrbitCamera.cpp  OrbitCamera.h
Core/Source/Renderer/Frontend/StaticMesh/: StaticMesh.h  StaticMeshHandler.h
Core/Source/Renderer/Mesh/: Mesh3D.h
Dependencies/stb-master/: CMakeLists.txt
Models/Ship/: ship.mtl
VulkanStarter/: Initializer.hpp  SwapChain.cpp  SwapChain.hpp  main.cpp  src.cpp
